--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "peerDependencies": {
         "react": "^17.0.2",
         "react-native": "^0.67.2",
+        "react-native-gesture-handler": "^2.2.0",
+        "react-native-svg": "^12.3.0",
+        "react-native-view-shot": "^3.1.2"
     }
 }
